# nda_mso_2

./: README.md  excercise.md  pyproject.toml  requirements-dev.txt
.github/workflows/: python-app.yml
scripts/: clean.py  create_venv.py  format.py  format_check.py  lint.py  test.py
src/app/: calculator.py  cli.py
tests/: test_calculator.py
